# tools-scheme

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  build_output.txt  justfile  stderr.txt  tools-scheme.code-workspace
.beads/: .beads-credential-key  config.yaml  metadata.json
.gemini/: settings.json
docs/: adr-001-coordinate-persistence.md  adr-002-notebook-source-parsing.md  architectural-analysis.md  coordinates.md  flaky-test-resolution.md  helix-integration.md  incremental_sync_implementation_plan.md  notebook-renderer-evaluation.md  refactoring-sequencer.md  ts-043-3-refactor.md  user-guide.md
lsp/: Cargo.toml
lsp/docs/: racket-evaluator-shim.md
lsp/repro/: repro-ts-qya.rkt  repro_double_eval.rkt  repro_eval.rkt  repro_eval_error.rkt  repro_eval_simple.rkt  repro_parse.rkt  repro_require_main.rkt  repro_ts_h31.rkt  test-crlf-drift-debug.rkt  test-crlf-drift.rkt  test-crlf.rkt  test-lock-racket.rkt  test-utf16.rkt  test_crlf.rkt  test_ns_init.rkt  verify_fix.rkt
lsp/src/: coordinates.rs  dispatch.rs  documents.rs  eval-shim.rkt  evaluator.rs  inlay_hints.rs  lib.rs  main.rs  parser.rs  repro-drift.rkt  server.rs  test-coordinates.rkt  test-lock_rust.rs  test-pos-char.rkt  worker.rs
lsp/tests/: encoding_test.rs  integration.rs  truncation.rs  windows_test.rs
lsp/tests/common/: mod.rs
scratch/: check_dispatcher.rs  check_dynamic.rkt  check_dynamic_2.rkt  check_sandbox.rkt  check_sandbox_2.rkt  debug_snip.rkt  list_sandbox_params.rkt  test_eval.jsonl  test_evaluate_file.rkt  test_rich.rkt  test_rich_eval.jsonl  test_sandbox_specs.rkt  (+5 more)
(+39 files in other folders)
