[package]
name = "scheme-toolbox-lsp"
version = "0.1.0"
edition = "2024"
description = "Language Server for Scheme and Racket with inlay hints and evaluation support."
license = "MIT"
repository = "https://github.com/rkaramc/tools-scheme"
homepage = "https://github.com/rkaramc/tools-scheme"
readme = "../README.md"

[[bin]]
name = "scheme-toolbox-lsp"
path = "src/main.rs"

[[bin]]
name = "coord-indexer"
path = "src/bin/coord_indexer.rs"

[[bin]]
name = "coord-compare"
path = "src/bin/coord_compare.rs"

[dependencies]
lsp-server = "0.7"
lsp-types = "0.95"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
crossbeam-channel = "0.5.15"
tempfile = "3.27.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
